Requisito 5 :heavy_check_mark:

--- a/style.css
+++ b/style.css
@@ -7,5 +7,15 @@ body {
 }
 
 #minha_foto {
+  display: block;
   height: 300px;
+}
+
+#listaEsq {
+  display: inline-block;
+  text-align: left;
+}
+
+#listaDir {
+  display: inline-block;
 }
