--- a/style.css
+++ b/style.css
@@ -41,4 +41,8 @@ table {
 footer {
   background-color: tomato;
   color: white;
+  font-size: 30px;
+  padding: 4px;
+  text-align: center;
+  margin-top: 100px;
 }
