--- a/style.css
+++ b/style.css
@@ -20,17 +20,22 @@ body {
 
 article {
   display: inline-block;
+  line-height: 20px;
   text-align: justify;
   margin-left: 20px;
   width: 230px;
 }
 
 aside {
+  color: blueviolet;
   display: inline-block;
-  text-align: left;
-  margin-left: 100px;
-  margin-right: 100px;
-  width: 100px;
+  font-family:'Courier New', Courier, monospace;
+  font-size: 24px;
+  line-height: 35px;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 10px;
+  width: 250px;
 }
 
 table {
