--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   display: inline-block;
 }
 
-article {
+.lado-esquerdo {
   display: inline-block;
   line-height: 20px;
   text-align: justify;
@@ -26,7 +26,7 @@ article {
   width: 230px;
 }
 
-aside {
+.lado-direito {
   color: blueviolet;
   display: inline-block;
   font-family:'Courier New', Courier, monospace;
