--- a/style.css
+++ b/style.css
@@ -20,38 +20,36 @@ nav {
   float: left;
   height: 300px;
 }
-/* TABELA
-#listaEsq #listaDir {
-  display: inline-block;
-  color: darkmagenta;
-}
-*/
+
 .lado-esquerdo {
-  /*display: inline-block;*/
+  /* display: inline-block; */
   color: darkblue;
   float: left;
   line-height: 20px;
   text-align: justify;
   margin-left: 20px;
+  position: static;
   width: 230px;
 }
 
 .lado-direito {
   color: blueviolet;
-  /*display: inline-block;*/
-  float: right;
+  display: inline-block;
   font-family: Courier New, Courier, monospace;
   font-size: 24px;
   line-height: 35px;
   text-align: center;
-  padding-left: 15px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: static;
   width: 250px;
 }
 
-table {
+section {
   border: 2px solid red;
-  /*display: inline-block;*/
+  display: inline-block;
+  padding: 25px;
+  margin-left: 68.8px;
 }
 
 footer {
