--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ nav {
 }
 
 .lado-esquerdo {
-  /* display: inline-block; */
   color: darkblue;
   float: left;
   line-height: 20px;
@@ -58,5 +57,4 @@ footer {
   font-size: 30px;
   padding: 4px;
   text-align: center;
-  margin-top: 100px;
-}
+  margin-top: 100px; }
